--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
   defaultConfig {
     applicationId "com.pedro.rtpstreamer"
-    minSdkVersion 16
+    minSdkVersion 21
     targetSdkVersion 30
     versionCode version_code
     versionName version_name
@@ -22,6 +22,9 @@ android {
 
 dependencies {
   implementation project(':rtplibrary')
+  implementation project(':svglibrary')
   implementation 'com.google.android.material:material:1.4.0'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
 }
