--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,6 +26,9 @@ dependencies {
   implementation 'com.google.android.material:material:1.4.0'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
   implementation 'com.google.android.material:material:1.1.0'
+  implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+  implementation 'com.google.code.gson:gson:2.8.2'
+  implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
 }
