--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
   implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+  implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.5.0'
+  implementation group: 'com.squareup.okhttp3', name: 'logging-interceptor', version: '4.5.0'
 }
